--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<nav class="header-menu">
 					<ul class="header-menu__list">
 						<li class="header-menu__list_item">
-							<a href="https://vk.com/mariamenia" target="blank">WHY Alivio</a>
+							<a href="https://vk.com/mariamenia" target="blank">Why Alivio</a>
 						</li>
 						<li class="header-menu__list_item">
 							<a href="">Solutions</a>
